# pylogger

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: action.yaml
src/pylogger/: __init__.py  pylogger.py
src/tests/: test_pylogger.py
