[tool.poetry]
name = "pylogger"
version = "0.1.0"
description = "A comprehensive Python logging package"
authors = ["Your Name <sudarshanv@unimelb.edu.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/pylogger"
repository = "https://github.com/yourusername/pylogger"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
